Add more functionality to tracking transactions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "pretest": "tsc --project tsconfig.test.json",
     "test": "ava",
     "posttest": "rimraf ./src/**/*.js",
-    "watch": "npm-watch"
+    "watch": "npm-watch",
+    "test-watch": "tsc --project tsconfig.test.json --watch"
   },
   "repository": {
     "type": "git",
@@ -35,15 +36,19 @@
   },
   "homepage": "https://github.com/bryanerayner/bank-accounts-model#readme",
   "dependencies": {
-    "@bryanerayner/currency-model": "0.0.1",
+    "@bryanerayner/currency-model": "0.0.4",
     "@bryanerayner/immutable-model-helpers": "^1.0.0",
     "@bryanerayner/reducer-helpers": "0.0.1",
+    "@types/lodash": "^4.14.34",
     "@types/node-uuid": "0.0.27",
     "guid": "0.0.12",
-    "immutable": "^3.8.1"
+    "immutable": "^3.8.1",
+    "lodash": "^4.15.0",
+    "node-uuid": "^1.4.7"
   },
   "devDependencies": {
     "ava": "^0.16.0",
-    "npm-watch": "^0.1.6"
+    "npm-watch": "^0.1.6",
+    "typescript": "^2.0.0"
   }
 }
